--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,24 @@
   </head>
 
   <body>
+    <div id="wrapper">
+      <%= render 'partial/navbar' if current_user %>
 
-    <%= render 'partial/navbar' %>
+      <% if flash[:notice] %>
+        <div class="alert alert-info">
+          <%= flash[:notice] %>
+        </div>
+      <% end %>
+      <% if flash[:alert] %>
+        <div class="alert alert-danger">
+          <%= flash[:danger] %>
+        </div>
+      <% end %>
 
-    <%= yield %>
+      <%= yield %>
+
+      <%= render 'partial/footer' %>
+
+    </div>
   </body>
 </html>
